ghc-4335c07/testsuite/tests/dependent/should_fail/T12174.hs
{-# LANGUAGE DataKinds #-}
{-# LANGUAGE ExistentialQuantification #-}
{-# LANGUAGE KindSignatures #-}
{-# LANGUAGE TypeInType #-}
module T12174 where

data V a
data T = forall (a :: S). MkT (V a)
data S = forall (a :: T). MkS (V a)
